--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 main: cn.wode490390.nukkit.cachesupport.CacheSupport
 name: "CacheSupport"
-description: "Client blob cache support plugin for Nukkit"
-author: "wode490390"
+description: "This demo allows the Nukkit server to enable support for ClientBlobCache"
+authors: ["wode490390", "Woder", "Wodor"]
 website: "http://wode490390.cn/"
 version: "${pom.version}"
 api: ["1.0.0"]
